test/negative/505_return_outside_function.fx
// expect: function
return 5
